fix letters being cut off in IE

--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,6 @@ pre {
     border: none;
     padding: 0;
     margin: 0;
-    line-height: 10px;
 }
 
 .cmdline input:focus {
